polkadot/xcm/procedural/tests/ui/builder_pattern.stderr
error: Expected the `Instruction` enum
  --> tests/ui/builder_pattern.rs:23:1
   |
23 | struct SomeStruct;
   | ^^^^^^^^^^^^^^^^^^
